sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:10: error: 'case' expected but identifier found.
      BLEU => if (i> debut){
      ^DutchFlagAlgo:14: error: '}' expected but ';' found.
      BLANC => while (getCouleur(avantBlanc)==BLANC){
^DutchFlagAlgo:30: error: eof expected but '}' found.
}
^